[metadata]
name = QQQR
version = attr: qqqr.VERSION
description = A simulation of tencent login protocol
author = JamzumSum
author_email = zzzzss990315@gmail.com
url = https://github.com/JamzumSum/QQQR
license = AGPL-3.0

[options]
python_requires = >=3.8
install_requires =
    requests
    opencv-python
tests_require =
    pytest
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src
