[metadata]
name = QQQR
version = attr: qqqr.VERSION
description = A simulation of tencent login protocol
author = JamzumSum
author_email = zzzzss990315@gmail.com
url = https://github.com/JamzumSum/QQQR
license = AGPL-3.0

[options]
python_requires = >=3.9
install_requires =
    requests
    opencv-python-headless
tests_require =
    pytest

packages = find:
package_dir=
    =src
include_package_data = True

[options.packages.find]
where = src
